--- a/src/main/webapp/public/pricing.xhtml
+++ b/src/main/webapp/public/pricing.xhtml
@@ -6,7 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<ui:composition template="/templates/main-template.xhtml">
+<ui:composition template="#{ remoteClient.details.role == &quot;root&quot; ? 
+'/templates/main-template-admin.xhtml' : remoteClient.details.role == &quot;user&quot; ? '/templates/main-template-user.xhtml' :
+'/templates/main-template.xhtml'}">
 
 	
 
