--- a/src/main/webapp/pages/userPages/my_reservations.xhtml
+++ b/src/main/webapp/pages/userPages/my_reservations.xhtml
@@ -68,7 +68,7 @@
 							<f:facet name="header">
 								<h:outputText value="Opis" />
 							</f:facet>
-							<h:outputText value="#{r.reservationDescription}" />
+							<h:outputText value="#{r.service.serviceName}" />
 						</p:column>
 
 						<!--	OPCJE.  -->
